# graphruntime

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.fr.md  README.md  SKILL.md  main.py  pyproject.toml
.github/: auto_release.sh  check_pr.sh
.github/workflows/: ci.yml
graphruntime/: __init__.py  agent.py  agents.py  cli.py  extractor.py  merger.py  runner.py
registry/: catalogue.json  index.json
registry/ai/: browser-use.json  d2l-zh.json  dify.json  firecrawl.json  langchain.json  llms-from-scratch.json  ml-for-beginners.json  netdata.json  ollama.json  open-webui.json  opencv.json  prompt-engineering-guide.json  prompts.chat.json  pytorch.json  ragflow.json  stable-diffusion-webui.json  tesseract.json  transformers.json  vllm.json
registry/clojure/: aleph.json  babashka.json  clojure.json  clojurescript.json  compojure.json  datascript.json  hiccup.json  lein-figwheel.json  leiningen.json  lighttable.json  logseq.json  maelstrom.json  metabase.json  pedestal.json  penpot.json  reagent.json  riemann.json  ring.json  status-legacy.json  xtdb.json
registry/cpp/: aria2.json  c-plus-plus.json  caffe.json  clickhouse.json  deepspeech.json  dragonfly.json  duckdb.json  flatbuffers.json  imgui.json  interview.json  mediapipe.json  mongo.json  openpose.json  paddle.json  protobuf.json  rocksdb.json  spdlog.json  tensorflow.json  xgboost.json
registry/csharp/: abp.json  archisteamfarm.json  aspnetboilerplate.json  bepinex.json  bogus.json  cefsharp.json  efcore.json  jackett.json  litedb.json  machinelearning.json  messagepack-csharp.json  ml-agents.json  nancy.json  questpdf.json  reactiveui.json  refit.json  server.json  stocksharp.json  unigetui.json  wavefunctioncollapse.json
registry/dart/: apidash.json  aqueduct.json  authpass.json  bloc.json  dio.json  fish-redux.json  flutter-ui-nice.json  (+13 more)
(+368 files in other folders)
